<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".models.DetailShoeFragment">

    <data>

        <variable
            name="shoeListingsViewModel"
            type="com.udacity.shoestore.models.ShoeListViewModel" />

        <variable
            name="shoeDetail"
            type="com.udacity.shoestore.models.Shoe"

            />
    </data>

    <!-- Constraint Layout because I prefer to have the items place set in place but still adjust with the size of the screen -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_details_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_details_header"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.144" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="80dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_details_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/shoeText"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/sh_name"
                    android:layout_width="226dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_shoe_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:afterTextChanged="@{Text -> shoeListingsViewModel.shoe.setName(Text)}"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/company_name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:afterTextChanged="@{Text -> shoeListingsViewModel.shoe.setCompany(Text)}"
                    android:ems="10"
                    android:hint="@string/enter_company_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"

                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="138dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shoe_size"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/shoe_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_shoe_size"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={`` + shoeListingsViewModel.shoe.size}"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="241dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|text"
                    android:minHeight="48dp"
                    android:afterTextChanged="@{Text -> shoeListingsViewModel.shoe.setDescription(Text)}" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/cancel"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/createAcc"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.109" />

        <Button
            android:id="@+id/save"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/createAcc"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.109" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>