<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.models.FragmentLogin" >

    <!-- Constraint Layout because I prefer to have the items place set in place but still adjust with the size of the screen -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            style="@style/text_style"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:ems="10"
            android:hint="@string/emailHint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="@dimen/text2_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.886" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/text_style"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pass_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="@dimen/text2_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            app:layout_constraintVertical_bias="0.145"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/create_login"
            style="@style/btnStyle"
            android:layout_height="60dp"
            android:backgroundTint="@color/createAcc"
            android:text="@string/newLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintVertical_bias="0.151" />

        <TextView
            android:id="@+id/textView5"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exsiting_account_text"
            android:textColor="#6E6E6E"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/existing_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_login"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/existing_login"
            style="@style/btnStyle"
            android:layout_width="344dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/exitingAcc"
            android:text="@string/login"
            android:textColor="#FFFFFF"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_login"
            app:layout_constraintVertical_bias="0.621" />

        <TextView
            android:id="@+id/textView4"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>