<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeList"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <LinearLayout
        android:id="@+id/shoeItemCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:foreground="?android:attr/selectableItemBackground">

        <!-- Using a linear layout because it provides a more uniform look since we are  looping through variable data to display on the screen-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name" />

                <TextView
                    android:id="@+id/shoe_name"
                    android:layout_width="263dp"
                    android:layout_height="wrap_content"
                    android:text="@={shoeList.name}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name" />

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="263dp"
                    android:layout_height="wrap_content"
                    android:text="@={shoeList.company}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_size" />

                <TextView
                    android:id="@+id/shoe_size"
                    android:layout_width="262dp"
                    android:layout_height="wrap_content"
                    android:text="@={`` +shoeList.size}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={shoeList.description}" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>