<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".models.InstructionsFragment">

<!-- used linearlayout to aligns all children in a single direction, vertically and also to hold constraintlayout to adjust with the size of the screen-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:text="@string/read_insrc"
                android:textSize="@dimen/headerTxt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.064" />

            <TextView
                android:id="@+id/textView12"
                style="@style/textBody_style"
                android:paddingTop="0dp"
                android:text="@string/instructions_msg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintVertical_bias="0.198" />

            <Button
                android:id="@+id/gotoshoeList_Btn"
                style="@style/btnStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/createAcc"
                android:text="@string/sheoList_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:layout_constraintVertical_bias="0.373" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>
